# orhtrus

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docker/: run-worker-cuda.sh  worker-entrypoint.sh
docker/coordinator/: Dockerfile
docker/profile/: Dockerfile.amd64  Dockerfile.cuda
docker/workers/: Dockerfile.amd64  Dockerfile.cuda
docs/: io.md
etc/: cflags.cmake  cuda.cmake  openmp.cmake
lib/oof/: oof.hh
py/: .gitignore  collect-logs.sh  configuration_opt.py  launch_config.py  pipeline_simulation.py  postprocess.py  preprocess.py  process_sharegpt.py  requirements.txt  run-command-remotes.py  run-docker-remotes.py  run.py  send-to-remotes.py  settings.py  variants.py
py/common/: message.py  tokenizer.py
py/coordinator/: base.py  coordinator.py  model.py  worker.py
py/protobuf/: Makefile  orthrus.proto  orthrus_pb2.py
py/simulation/: pipe_sim.pxd  pipe_sim.pyx  pipeline_simulation.hh  setup.py
src/arch/: float.hh  platform_macros.hh
src/compute/: common.hh  contextman.hh  kernel.hh  kernel_hybrid.hh  kernel_hybrid_simple.hh  kernel_piped.hh  routerman.hh
src/frontend/: device-query.cc  faux-worker.cc  infer-hybrid.cc  infer.cc  profile-gemm.cc  profile-stage.cc  ramble.cc  worker-hybrid.cc  worker.cc
src/message/: handler.cc  handler.hh  message.cc  message.hh  util.cc  util.hh
src/models/: types.cc  types.hh
src/monitoring/: measurement.hh  telegraf.cc  telegraf.hh  util.hh
src/net/: address.cc  address.hh  secure_socket.cc  secure_socket.hh  session.cc  session.hh  socket.cc  socket.hh
src/profile/: gemm_profiler.hh  profiler.hh
src/prompt/: prompt.cc  prompt.hh
src/storage/: blobstore.cc  blobstore.hh
src/util/: convert.cc  convert.hh  demangle.cc  demangle.hh  digest.cc  digest.hh  eventfd.hh  eventloop.cc  split.cc  (+17 more)
targets/: _targets.cmake
targets/cuda/: CMakeLists.txt
tools/: bin2glint.py  profile-gemm.bash  profile.bash  slot_sim.py
(+226 files in other folders)
